[Mac] Do not try to update the cache model for every WebPreferences change https://bugs.webkit.org/show_bug.cgi?id=91302

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-07-13
Reviewed by Joseph Pecoraro.

Source/WebKit/mac:

WebView was listening to any change on any WebPreferences in order to update the cache model. This is unneeded in most cases,
we can just listen to updates of the CacheModel property.

* WebView/WebPreferences.mm:
(-[WebPreferences initWithIdentifier:]):
(-[WebPreferences _postCacheModelChangedNotification]):
(-[WebPreferences setCacheModel:]):
* WebView/WebPreferencesPrivate.h:
* WebView/WebView.mm:
(+[WebView initialize]):
(+[WebView _cacheModelChangedNotification:]):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/SetAndUpdateCacheModel.mm: Added.
(TestWebKitAPI):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/109137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122665 268f45cc-cd09-0410-ab3c-d52691b4dbfc